k8s/web/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: unige-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: web
          image: ghcr.io/unige-pinfo6-2026/unige-events-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: unige-events
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
